# mir_robot

mir_description/: package.xml
mir_description/config/: diffdrive_controller.yaml
mir_description/launch/: upload_mir_urdf.launch
mir_description/meshes/visual/: small_wheel.stl  small_wheel_yaw.stl
mir_description/urdf/: mir.urdf.xacro
mir_description/urdf/include/: mir_250.transmission.xacro  mir_250_v1.urdf.xacro
mir_gazebo/launch/: mir_empty_world.launch  mir_gazebo_common.launch
mir_navigation/config/: move_base_common_params.yaml
